# PalletFlow

./: .gitignore  .pre-commit-config.yaml  README.md  build_script.py  heatmap_gui.py  lab_alocation.py  lab_simpy.py  pyproject.toml  simulation.py  simulation_simpy.py
.junie/: guideline.md
docs/: Como_é_calculado_o_tempo_para_inicio_de.md
