[tool.poetry]
name = "pallet flow"
version = "0.1.0"
description = ""
authors = ["Julio Cezar Riffel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.6"
simpy = "^4.1.1"
pre-commit = "^4.3.0"
ruff = "^0.13.0"

[tool.ruff]
# Keep formatting consistent and fast; Ruff is both linter and formatter
target-version = "py312"
line-length = 119
extend-exclude = [
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
# E,F: pycodestyle/pyflakes; I: import sorting
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
